@@ -26,13 +26,13 @@ This table summarizes each block and which base levels they're included in:
 | ESLint Plugin                      | `--add-eslint-plugin`, `--exclude-eslint-plugin`                                           |         |        |            |
 | ESLint Regexp Plugin               | `--add-eslint-regexp-plugin`, `--exclude-eslint-regexp-plugin`                             |         |        | 💯         |
 | ESLint YML Plugin                  | `--add-eslint-yml-plugin`, `--exclude-eslint-yml-plugin`                                   |         |        | 💯         |
+| Exports                            | `--add-exports`, `--exclude-exports`                                                       | ✔️      | ✅     | 💯         |
 | Funding                            | `--add-funding`, `--exclude-funding`                                                       |         | ✅     | 💯         |
 | GitHub Actions CI                  | `--add-github-actions-ci`, `--exclude-github-actions-ci`                                   | ✔️      | ✅     | 💯         |
 | GitHub Issue Templates             | `--add-github-issue-templates`, `--exclude-github-issue-templates`                         | ✔️      | ✅     | 💯         |
 | GitHub PR Template                 | `--add-github-pr-template`, `--exclude-github-pr-template`                                 | ✔️      | ✅     | 💯         |
 | Gitignore                          | `--add-gitignore`, `--exclude-gitignore`                                                   | ✔️      | ✅     | 💯         |
 | Knip                               | `--add-knip`, `--exclude-knip`                                                             |         |        | 💯         |
-| Main                               | `--add-main`, `--exclude-main`                                                             | ✔️      | ✅     | 💯         |
 | MIT License                        | `--add-mit-license`, `--exclude-mit-license`                                               | ✔️      | ✅     | 💯         |
 | ncc                                | `--add-ncc`, `--exclude-ncc`                                                               |         |        |            |
 | nvmrc                              | `--add-nvmrc`, `--exclude-nvmrc`                                                           |         |        | 💯         |
@@ -49,6 +49,7 @@ This table summarizes each block and which base levels they're included in:
 | release-it                         | `--add-release-it`, `--exclude-release-it`                                                 |         | ✅     | 💯         |
 | Renovate                           | `--add-renovate`, `--exclude-renovate`                                                     |         |        | 💯         |
 | Security Docs                      | `--add-security-docs`, `--exclude-security-docs`                                           | ✔️      | ✅     | 💯         |
+| Side Effects                       | `--add-side-effects`, `--exclude-side-effects`                                             | ✔️      | ✅     | 💯         |
 | Templated With                     | `--add-templated-with`, `--exclude-templated-with`                                         | ✔️      | ✅     | 💯         |
 | TSDown                             | `--add-tsdown`, `--exclude-tsdown`                                                         | ✔️      | ✅     | 💯         |
 | TypeScript                         | `--add-typescript`, `--exclude-typescript`                                                 | ✔️      | ✅     | 💯         |
@@ -247,18 +248,34 @@ pnpm run test run --coverage
 This level is for developers who are eager to get the maximum tooling benefits in a repository.
 Using the _"everything"_ level will gain you comprehensive, strict coverage of all sorts of repository issues, including auto-sorting of properties and strict ESLint configs.
 
-- [Lint ESLint](#lint-eslint)
-- [Lint JSDoc](#lint-jsdoc)
-- [Lint JSON](#lint-json)
-- [Lint Package JSON](#lint-package-json)
-- [Lint Packages](#lint-packages)
-- [Lint Perfectionist](#lint-perfectionist)
-- [Lint Regexp](#lint-regexp)
-- [Lint Spelling](#lint-spelling)
-- [Lint Strict](#lint-strict)
-- [Lint Stylistic](#lint-stylistic)
-- [Lint YML](#lint-yml)
-- [OctoGuide Strict](#octoguide-strict)
+- [Blocks](#blocks)
+  - ["Minimal" Base Level](#minimal-base-level)
+    - [Building](#building)
+    - [Formatting](#formatting)
+    - [Linting](#linting)
+    - [Package Management](#package-management)
+    - [Repository Templates](#repository-templates)
+    - [Type Checking](#type-checking)
+  - ["Common" Base Level](#common-base-level)
+    - [Contributors](#contributors)
+    - [Lint Knip](#lint-knip)
+    - [OctoGuide](#octoguide)
+    - [Releases](#releases)
+    - [Renovate](#renovate)
+    - [Testing](#testing)
+  - ["Everything" Base Level](#everything-base-level)
+    - [Lint ESLint](#lint-eslint)
+    - [Lint JSDoc](#lint-jsdoc)
+    - [Lint JSON](#lint-json)
+    - [Lint Package JSON](#lint-package-json)
+    - [Lint Packages](#lint-packages)
+    - [Lint Perfectionist](#lint-perfectionist)
+    - [Lint Regexp](#lint-regexp)
+    - [Lint Spelling](#lint-spelling)
+    - [Lint Strict](#lint-strict)
+    - [Lint Stylistic](#lint-stylistic)
+    - [Lint YML](#lint-yml)
+    - [OctoGuide Strict](#octoguide-strict)
 
 ### Lint ESLint
 
